--- a/Style.css
+++ b/Style.css
@@ -143,6 +143,21 @@ label {
 		margin-left: 90px;
 	}
 }
+@media (max-width: 550px) {
+	.form1 {
+		display: block;
+		width: 80%;
+	}
+	.form2 {
+		margin-left: 0px;
+		width: 80%;
+	}
+	h3 {
+		font-size: 30px;
+		margin-left: 150px;
+	}
+
+}
 
 
 
